<resources>
    <string name="app_name">CoyoteApp</string>
    <string name="today_exchange_rate">Exchange Rate by %1$s</string>
    <string name="exchange_amount">C$ 32.50</string>
    <string name="official"><u>Official</u></string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="purchase">Purchase</string>
    <string name="sell">Sell</string>
</resources>