<?xml version="1.0" encoding="utf-8"?>

<com.yusufpats.backdroplayout.BackdropLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backdrop_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    app:elevation="0dp"
    tools:context=".ui.activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="@dimen/constraint_zero"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtExchangeTitle"
            android:layout_width="@dimen/constraint_zero"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/text_3x"
            android:textAlignment="center"
            android:text="@string/today_exchange_rate"
            android:textColor="@color/md_white_1000"
            android:gravity="center_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtExchangeValue"
            android:layout_width="@dimen/constraint_zero"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtExchangeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textAllCaps="true"
            android:textSize="@dimen/text_5x"
            android:textStyle="italic|normal"
            android:text="@string/exchange_amount"
            android:gravity="center_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtExchangeOfficial"
            android:layout_width="@dimen/constraint_zero"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtExchangeValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/text_2x"
            android:text="@string/official"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/front_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        style="@style/Widget.MaterialComponents.CardView"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="16dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:cardElevation="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frontContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/divider"
                android:layout_width="110dp"
                android:layout_height="7dp"
                android:layout_marginTop="@dimen/margin_default"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/rounded_divider"
                app:layout_constraintEnd_toEndOf="parent"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                app:selectionRequired="true"
                android:padding="@dimen/margin_default"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipToday"
                        style="@style/AppTheme.ChoiceChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_6x"
                        android:layout_marginRight="@dimen/margin_6x"
                        android:checked="true"
                        android:text="@string/today"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipWeek"
                        style="@style/AppTheme.ChoiceChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/week" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMonth"
                        style="@style/AppTheme.ChoiceChips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_6x"
                        android:layout_marginLeft="@dimen/margin_6x"
                        android:text="@string/month" />
            </com.google.android.material.chip.ChipGroup>
            <!--Due to Backdrop needs 200dp to set the UI as the mockup, the recyclerview needs 200dp of BottomMargin too-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_exchanges_rates"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="150dp"
                app:layout_constraintTop_toBottomOf="@+id/chipGroup"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="@dimen/constraint_zero"
                android:layout_height="@dimen/constraint_zero"
                tools:listitem="@layout/banks_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</com.yusufpats.backdroplayout.BackdropLayout>