<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bankCardImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="@dimen/margin_2x"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/purchase"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bankImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />
    </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/purchase"
            android:gravity="start|center_vertical"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bankCardImage"
            app:layout_constraintEnd_toStartOf="@+id/sell"
            app:layout_constraintBottom_toTopOf="@+id/purchaseValue"
            android:layout_marginStart="@dimen/margin_6x"
            android:layout_marginLeft="@dimen/margin_6x"
            android:text="@string/purchase"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/purchaseValue"
            android:gravity="start|center_vertical"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/purchase"
            app:layout_constraintStart_toEndOf="@+id/bankCardImage"
            app:layout_constraintEnd_toStartOf="@+id/sellValue"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/margin_6x"
            android:layout_marginLeft="@dimen/margin_6x"
            android:text="@string/exchange_amount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sell"
            android:gravity="start|center_vertical"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sellValue"
            app:layout_constraintStart_toEndOf="@+id/purchase"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sell"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sellValue"
            android:gravity="start|center_vertical"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/sell"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/purchaseValue"
            android:text="@string/exchange_amount"/>

</androidx.constraintlayout.widget.ConstraintLayout>